--- a/templates/base.html
+++ b/templates/base.html
@@ -175,6 +175,7 @@
                             </div>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end border-0 shadow-lg mt-3 rounded-4 p-2">
+                            <li><a class="dropdown-item rounded-2" href="{{ url_for('profile') }}"><i class="fas fa-user-circle text-dark me-2"></i> Thông tin tài khoản</a></li>
                             <li><a class="dropdown-item rounded-2" href="{{ url_for('my_favorites') }}"><i class="fas fa-heart text-danger me-2"></i> Khách sạn đã lưu</a></li>
                             <li><a class="dropdown-item rounded-2" href="{{ url_for('history') }}"><i class="fas fa-history text-primary me-2"></i> Xem gần đây</a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -418,3 +419,4 @@
     {% block scripts %}{% endblock %}
 </body>
 </html>
+
